added an advance query to my mechanic
